--- a/Anamnese/Views/PacienteModels/Index.cshtml
+++ b/Anamnese/Views/PacienteModels/Index.cshtml
@@ -28,7 +28,7 @@
     @foreach (var item in Model) {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.NomePaciente) @Html.DisplayFor(modelItem => item.SobrenomePaciente)
+                        @Html.DisplayFor(modelItem => item.NomeCompletoPaciente)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.DataCadastroPaciente)
