--- a/Anamnese/Views/AnamneseModels/Details.cshtml
+++ b/Anamnese/Views/AnamneseModels/Details.cshtml
@@ -11,70 +11,73 @@
     }
 </script>
 
-<h1>Detalhes da Anamnese</h1>
+<h1 class="text-center">Detalhes da Anamnese</h1>
 
 <div>
     <hr />
-    <dl class="row">
-        <dt class="col-sm-2 text-left">
-            <!-- Alinhar os títulos à esquerda -->
-            @Html.DisplayNameFor(model => model.IdPaciente)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IdPaciente)
-        </dd>
-        <dt class="col-sm-2 text-left">
-            @Html.DisplayNameFor(model => model.QueixaPrincipalAnamnese)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.QueixaPrincipalAnamnese)
-        </dd>
-        <dt class="col-sm-2 text-left">
-            @Html.DisplayNameFor(model => model.HistoricoDoencaAtualAnamnese)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.HistoricoDoencaAtualAnamnese)
-        </dd>
-        <dt class="col-sm-2 text-left">
-            @Html.DisplayNameFor(model => model.AntecedentesPessoaisAnamnese)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AntecedentesPessoaisAnamnese)
-        </dd>
-        <dt class="col-sm-2 text-left">
-            @Html.DisplayNameFor(model => model.AntecedentesFamiliaresAnamnese)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AntecedentesFamiliaresAnamnese)
-        </dd>
-        <dt class="col-sm-2 text-left">
-            @Html.DisplayNameFor(model => model.ExameFisicoAnamnese)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ExameFisicoAnamnese)
-        </dd>
-        <dt class="col-sm-2 text-left">
-            @Html.DisplayNameFor(model => model.HipotesesDiagnosticasAnamnese)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.HipotesesDiagnosticasAnamnese)
-        </dd>
-        <dt class="col-sm-2 text-left">
-            @Html.DisplayNameFor(model => model.PlanoTratamentoAnamnese)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PlanoTratamentoAnamnese)
-        </dd>
-        <dt class="col-sm-2 text-left">
-            @Html.DisplayNameFor(model => model.DataCadastroAnamnese)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DataCadastroAnamnese)
-        </dd>
-    </dl>
+    <div class="justify-content-center align-items-center">
+        <dl class="row">
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.QueixaPrincipalAnamnese)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.QueixaPrincipalAnamnese)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.HistoricoDoencaAtualAnamnese)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.HistoricoDoencaAtualAnamnese)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.AntecedentesPessoaisAnamnese)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.AntecedentesPessoaisAnamnese)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.AntecedentesFamiliaresAnamnese)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.AntecedentesFamiliaresAnamnese)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.ExameFisicoAnamnese)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.ExameFisicoAnamnese)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.HipotesesDiagnosticasAnamnese)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.HipotesesDiagnosticasAnamnese)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.PlanoTratamentoAnamnese)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.PlanoTratamentoAnamnese)
+            </dd>
+            <dt class="col-sm-3 font-weight-bold text-primary">
+                @Html.DisplayNameFor(model => model.DataCadastroAnamnese)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.DataCadastroAnamnese)
+            </dd>
+        </dl>
+    </div>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdAnamnese" asp-route-IdPaciente="@idPaciente">Editar</a> |
-    <a href="javascript:openPdf('@Url.Action("GerarPdf", new { id = Model.IdAnamnese })');">Gerar PDF</a> |
-    <a asp-action="Index" asp-controller="AnamneseModels" asp-route-idPaciente="@idPaciente">Voltar</a>
+<div class="text-center mt-4">
+    <a class="btn btn-primary mr-2" asp-action="Edit" asp-route-id="@Model?.IdAnamnese" asp-route-IdPaciente="@idPaciente">
+        Editar
+    </a>
+
+    <a class="btn btn-warning mr-2" href="javascript:openPdf('@Url.Action("GerarPdf", new { id = Model.IdAnamnese })');">
+        <i class="bi bi-file-earmark-pdf"></i> Gerar PDF
+    </a>
+
+    <a class="btn btn-secondary" asp-action="Index" asp-controller="AnamneseModels" asp-route-idPaciente="@idPaciente">
+        Voltar
+    </a>
 </div>
