--- a/Anamnese/Views/PacienteModels/Edit.cshtml
+++ b/Anamnese/Views/PacienteModels/Edit.cshtml
@@ -177,8 +177,12 @@
             </div>
 
             <!-- Botão Cadastrar -->
-            <div class="form-group">
-                <input type="submit" value="Cadastrar" class="btn btn-primary btn-lg w-100" />
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input type="submit" value="Cadastrar" class="btn btn-primary btn-lg w-100" />
+                    </div>
+                </div>
             </div>
         </form>
     </div>
