Tenho que resolver  exibição de datas em formtado brasileiro e a geração de PDF

--- a/Anamnese/Views/Shared/_Layout.cshtml
+++ b/Anamnese/Views/Shared/_Layout.cshtml
@@ -29,7 +29,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Sistema de Gerenciamento de Anamneses
+            &copy; 2024 - Sistema de Gerenciamento de Anamneses</br>
+            Desenvolvido por Raul Souto
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
