--- a/Anamnese/Views/AnamneseModels/Index.cshtml
+++ b/Anamnese/Views/AnamneseModels/Index.cshtml
@@ -41,7 +41,7 @@
                         <a class="btn btn-warning btn-sm" asp-action="Details" asp-route-id="@item.IdAnamnese" asp-route-idPaciente="@idPaciente">
                             <i class="bi bi-card-list"></i> Detalhes
                         </a>
-                        <a class="btn btn-info btn-sm" href="javascript:openPdf('@Url.Action("GerarPdf", new { id = item.IdAnamnese })');">
+                        <a class="btn btn-info btn-sm" href="javascript:void(0);" onclick="openPdf('@Url.Action("GerarPdf", new { id = item.IdAnamnese })');">
                             <i class="bi bi-file-earmark-pdf"></i> Gerar PDF
                         </a>
                         <a class="btn btn-primary btn-sm" asp-action="Edit" asp-route-id="@item.IdAnamnese" asp-route-idPaciente="@idPaciente">
