por algum motivo, não consigo cadastrar pacientes e tenho que ver a questão do cep

--- a/Anamnese/Views/PacienteModels/Edit.cshtml
+++ b/Anamnese/Views/PacienteModels/Edit.cshtml
@@ -8,7 +8,7 @@
 <hr />
 <div class="row justify-content-center">
     <div class="col-md-6">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
 
             <!-- Nome e Sobrenome -->
@@ -99,77 +99,77 @@
 
             <!-- Endereço -->
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="form-group mb-3">
                         <label asp-for="CepPaciente" class="form-label"></label>
                         <input asp-for="CepPaciente" class="form-control" placeholder="XXXXX-XXX" />
                         <span asp-validation-for="CepPaciente" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="form-group mb-3">
                         <label asp-for="LogradouroPaciente" class="form-label"></label>
                         <input asp-for="LogradouroPaciente" class="form-control" placeholder="Rua, Avenida..." />
                         <span asp-validation-for="LogradouroPaciente" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="col-md-4">
+            </div>
+
+            <div class="row">
+                <div class="col-md-3">
                     <div class="form-group mb-3">
                         <label asp-for="NumeroEnderecoPaciente" class="form-label"></label>
                         <input asp-for="NumeroEnderecoPaciente" class="form-control" placeholder="Número" />
                         <span asp-validation-for="NumeroEnderecoPaciente" class="text-danger"></span>
                     </div>
                 </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="form-group mb-3">
                         <label asp-for="BairroPaciente" class="form-label"></label>
                         <input asp-for="BairroPaciente" class="form-control" placeholder="Bairro" />
                         <span asp-validation-for="BairroPaciente" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="form-group mb-3">
                         <label asp-for="CidadePaciente" class="form-label"></label>
                         <input asp-for="CidadePaciente" class="form-control" placeholder="Cidade" />
                         <span asp-validation-for="CidadePaciente" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="form-group mb-3">
                         <label asp-for="EstadoPaciente" class="form-label"></label>
                         <select asp-for="EstadoPaciente" class="form-select">
                             <option value="" disabled selected>Selecione...</option>
                             @* Opções do estado *@
-                            <option value="AC">AC - Acre</option>
-                            <option value="AL">AL - Alagoas</option>
-                            <option value="AP">AP - Amapá</option>
-                            <option value="AM">AM - Amazonas</option>
-                            <option value="BA">BA - Bahia</option>
-                            <option value="CE">CE - Ceará</option>
-                            <option value="DF">DF - Distrito Federal</option>
-                            <option value="ES">ES - Espírito Santo</option>
-                            <option value="GO">GO - Goiás</option>
-                            <option value="MA">MA - Maranhão</option>
-                            <option value="MT">MT - Mato Grosso</option>
-                            <option value="MS">MS - Mato Grosso do Sul</option>
-                            <option value="MG">MG - Minas Gerais</option>
-                            <option value="PA">PA - Pará</option>
-                            <option value="PB">PB - Paraíba</option>
-                            <option value="PR">PR - Paraná</option>
-                            <option value="PE">PE - Pernambuco</option>
-                            <option value="PI">PI - Piauí</option>
-                            <option value="RJ">RJ - Rio de Janeiro</option>
-                            <option value="RN">RN - Rio Grande do Norte</option>
-                            <option value="RS">RS - Rio Grande do Sul</option>
-                            <option value="RO">RO - Rondônia</option>
-                            <option value="RR">RR - Roraima</option>
-                            <option value="SC">SC - Santa Catarina</option>
-                            <option value="SP">SP - São Paulo</option>
-                            <option value="SE">SE - Sergipe</option>
-                            <option value="TO">TO - Tocantins</option>
+                            <option value="AC">AC</option>
+                            <option value="AL">AL</option>
+                            <option value="AP">AP</option>
+                            <option value="AM">AM</option>
+                            <option value="BA">BA</option>
+                            <option value="CE">CE</option>
+                            <option value="DF">DF</option>
+                            <option value="ES">ES</option>
+                            <option value="GO">GO</option>
+                            <option value="MA">MA</option>
+                            <option value="MT">MT</option>
+                            <option value="MS">MS</option>
+                            <option value="MG">MG</option>
+                            <option value="PA">PA</option>
+                            <option value="PB">PB</option>
+                            <option value="PR">PR</option>
+                            <option value="PE">PE</option>
+                            <option value="PI">PI</option>
+                            <option value="RJ">RJ</option>
+                            <option value="RN">RN</option>
+                            <option value="RS">RS</option>
+                            <option value="RO">RO</option>
+                            <option value="RR">RR</option>
+                            <option value="SC">SC</option>
+                            <option value="SP">SP</option>
+                            <option value="SE">SE</option>
+                            <option value="TO">TO</option>
                         </select>
                         <span asp-validation-for="EstadoPaciente" class="text-danger"></span>
                     </div>
