--- a/Anamnese/Views/Shared/_Layout.cshtml
+++ b/Anamnese/Views/Shared/_Layout.cshtml
@@ -28,9 +28,9 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - Sistema de Gerenciamento de Anamneses</br>
-            Desenvolvido por Raul Souto
+        <div class="d-flex justify-content-around">
+            <p>&copy; 2024 - Sistema de Gerenciamento de Anamneses</p>
+            <p>Desenvolvido por Raul Souto</p>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
