--- a/Anamnese/Views/AnamneseModels/Edit.cshtml
+++ b/Anamnese/Views/AnamneseModels/Edit.cshtml
@@ -11,7 +11,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-8">
-            <form asp-action="Create">
+            <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
 
                 <input asp-for="IdPaciente" value="@idPaciente" type="hidden" />
