--- a/Anamnese/Views/PacienteModels/Edit.cshtml
+++ b/Anamnese/Views/PacienteModels/Edit.cshtml
@@ -6,111 +6,201 @@
 
 <h1>Editar Paciente</h1>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="IdPaciente" />
-            <div class="form-group">
-                <label asp-for="NomePaciente" class="control-label"></label>
-                <input asp-for="NomePaciente" class="form-control" />
-                <span asp-validation-for="NomePaciente" class="text-danger"></span>
+<div class="container">
+    <form asp-action="Edit">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="row">
+            <div class="col">
+                <input type="hidden" asp-for="IdPaciente" />
+                <input type="hidden" asp-for="DataCadastroPaciente" />
+                <div class="form-group">
+                    <label asp-for="NomePaciente" class="control-label"></label>
+                    <input asp-for="NomePaciente" class="form-control" />
+                    <span asp-validation-for="NomePaciente" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="SobrenomePaciente" class="control-label"></label>
-                <input asp-for="SobrenomePaciente" class="form-control" />
-                <span asp-validation-for="SobrenomePaciente" class="text-danger"></span>
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="SobrenomePaciente" class="control-label"></label>
+                    <input asp-for="SobrenomePaciente" class="form-control" />
+                    <span asp-validation-for="SobrenomePaciente" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="DataNascimentoPaciente" class="control-label"></label>
-                <input asp-for="DataNascimentoPaciente" class="form-control" />
-                <span asp-validation-for="DataNascimentoPaciente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="GeneroPaciente" class="control-label"></label>
-                <input asp-for="GeneroPaciente" class="form-control" />
-                <span asp-validation-for="GeneroPaciente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CpfPaciente" class="control-label"></label>
-                <input asp-for="CpfPaciente" class="form-control" />
-                <span asp-validation-for="CpfPaciente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="RgPaciente" class="control-label"></label>
-                <input asp-for="RgPaciente" class="form-control" />
-                <span asp-validation-for="RgPaciente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CertidaoPaciente" class="control-label"></label>
-                <input asp-for="CertidaoPaciente" class="form-control" />
-                <span asp-validation-for="CertidaoPaciente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="NaturalidadePaciente" class="control-label"></label>
-                <input asp-for="NaturalidadePaciente" class="form-control" />
-                <span asp-validation-for="NaturalidadePaciente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TelefonePaciente" class="control-label"></label>
-                <input asp-for="TelefonePaciente" class="form-control" />
-                <span asp-validation-for="TelefonePaciente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CelularPaciente" class="control-label"></label>
-                <input asp-for="CelularPaciente" class="form-control" />
-                <span asp-validation-for="CelularPaciente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EstadoCivilPaciente" class="control-label"></label>
-                <input asp-for="EstadoCivilPaciente" class="form-control" />
-                <span asp-validation-for="EstadoCivilPaciente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CepPaciente" class="control-label"></label>
-                <input asp-for="CepPaciente" class="form-control" />
-                <span asp-validation-for="CepPaciente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LogradouroPaciente" class="control-label"></label>
-                <input asp-for="LogradouroPaciente" class="form-control" />
-                <span asp-validation-for="LogradouroPaciente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="NumeroEnderecoPaciente" class="control-label"></label>
-                <input asp-for="NumeroEnderecoPaciente" class="form-control" />
-                <span asp-validation-for="NumeroEnderecoPaciente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="BairroPaciente" class="control-label"></label>
-                <input asp-for="BairroPaciente" class="form-control" />
-                <span asp-validation-for="BairroPaciente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CidadePaciente" class="control-label"></label>
-                <input asp-for="CidadePaciente" class="form-control" />
-                <span asp-validation-for="CidadePaciente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EstadoPaciente" class="control-label"></label>
-                <input asp-for="EstadoPaciente" class="form-control" />
-                <span asp-validation-for="EstadoPaciente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DataCadastroPaciente" class="control-label"></label>
-                <input asp-for="DataCadastroPaciente" class="form-control" />
-                <span asp-validation-for="DataCadastroPaciente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+        </div>
 
-<div>
-    <a asp-action="Index">Voltar para a lista</a>
-    <a asp-action="Index">Voltar</a>
+        <div class="row">
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="DataNascimentoPaciente" class="control-label"></label>
+                    <input asp-for="DataNascimentoPaciente" class="form-control" />
+                    <span asp-validation-for="DataNascimentoPaciente" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="GeneroPaciente" class="control-label"></label>
+                    <select asp-for="GeneroPaciente" class="form-select">
+                        <option value="" disabled selected>Selecione...</option>
+                        <option value="Masculino">Masculino</option>
+                        <option value="Feminino">Feminino</option>
+                        <option value="Divorciado(a)">Divorciado(a)</option>
+                        <option value="Outro">Outro</option>
+                        <option value="Prefiro não informar">Prefiro não informar</option>
+                    </select>
+                    <span asp-validation-for="GeneroPaciente" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="CpfPaciente" class="control-label"></label>
+                    <input asp-for="CpfPaciente" class="form-control" placeholder="XXX.XXX.XXX-XX" />
+                    <span asp-validation-for="CpfPaciente" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="RgPaciente" class="control-label"></label>
+                    <input asp-for="RgPaciente" class="form-control" placeholder="XX.XXX.XXX-XX" />
+                    <span asp-validation-for="RgPaciente" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="CertidaoPaciente" class="control-label"></label>
+                    <input asp-for="CertidaoPaciente" class="form-control" placeholder="XXXXXX, XX XX XXXX, XX:XX" />
+                    <span asp-validation-for="CertidaoPaciente" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="NaturalidadePaciente" class="control-label"></label>
+                    <input asp-for="NaturalidadePaciente" class="form-control" />
+                    <span asp-validation-for="NaturalidadePaciente" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="TelefonePaciente" class="control-label"></label>
+                    <input asp-for="TelefonePaciente" class="form-control" placeholder="(XX) XXXX-XXXX" />
+                    <span asp-validation-for="TelefonePaciente" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="CelularPaciente" class="control-label"></label>
+                    <input asp-for="CelularPaciente" class="form-control" placeholder="(XX) XXXXX-XXXX" />
+                    <span asp-validation-for="CelularPaciente" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="EstadoCivilPaciente" class="control-label"></label>
+                    <select asp-for="EstadoCivilPaciente" class="form-select">
+                        <option value="" disabled selected>Selecione...</option>
+                        <option value="Solteiro(a)">Solteiro(a)</option>
+                        <option value="Casado(a)">Casado(a)</option>
+                        <option value="Divorciado(a)">Divorciado(a)</option>
+                        <option value="Viúvo(a)">Viúvo(a)</option>
+                        <option value="Separado(a)">Separado(a)</option>
+                    </select>
+                    <span asp-validation-for="EstadoCivilPaciente" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="CepPaciente" class="control-label"></label>
+                    <input asp-for="CepPaciente" class="form-control" placeholder="XXXXX-XXX" />
+                    <span asp-validation-for="CepPaciente" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="LogradouroPaciente" class="control-label"></label>
+                    <input asp-for="LogradouroPaciente" class="form-control" />
+                    <span asp-validation-for="LogradouroPaciente" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="NumeroEnderecoPaciente" class="control-label"></label>
+                    <input asp-for="NumeroEnderecoPaciente" class="form-control" />
+                    <span asp-validation-for="NumeroEnderecoPaciente" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="BairroPaciente" class="control-label"></label>
+                    <input asp-for="BairroPaciente" class="form-control" />
+                    <span asp-validation-for="BairroPaciente" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="CidadePaciente" class="control-label"></label>
+                    <input asp-for="CidadePaciente" class="form-control" />
+                    <span asp-validation-for="CidadePaciente" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="EstadoPaciente" class="control-label"></label>
+                    <select asp-for="EstadoPaciente" class="form-select">
+                        <option value="" disabled selected>Selecione...</option>
+                        <option value="AC">AC - Acre</option>
+                        <option value="AL">AL - Alagoas</option>
+                        <option value="AP">AP - Amapá</option>
+                        <option value="AM">AM - Amazonas</option>
+                        <option value="BA">BA - Bahia</option>
+                        <option value="CE">CE - Ceará</option>
+                        <option value="DF">DF - Distrito Federal</option>
+                        <option value="ES">ES - Espírito Santo</option>
+                        <option value="GO">GO - Goiás</option>
+                        <option value="MA">MA - Maranhão</option>
+                        <option value="MT">MT - Mato Grosso</option>
+                        <option value="MS">MS - Mato Grosso do Sul</option>
+                        <option value="MG">MG - Minas Gerais</option>
+                        <option value="PA">PA - Pará</option>
+                        <option value="PB">PB - Paraíba</option>
+                        <option value="PR">PR - Paraná</option>
+                        <option value="PE">PE - Pernambuco</option>
+                        <option value="PI">PI - Piauí</option>
+                        <option value="RJ">RJ - Rio de Janeiro</option>
+                        <option value="RN">RN - Rio Grande do Norte</option>
+                        <option value="RS">RS - Rio Grande do Sul</option>
+                        <option value="RO">RO - Rondônia</option>
+                        <option value="RR">RR - Roraima</option>
+                        <option value="SC">SC - Santa Catarina</option>
+                        <option value="SP">SP - São Paulo</option>
+                        <option value="SE">SE - Sergipe</option>
+                        <option value="TO">TO - Tocantins</option>
+                    </select>
+                    <span asp-validation-for="EstadoPaciente" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+        <br />
+        <hr />
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <div class="form-group">
+                    <input type="submit" value="Editar" class="btn btn-primary btn-lg me-2" />
+                    <a asp-action="Index" class="btn btn-secondary btn-lg">Voltar</a>
+                </div>
+            </div>
+        </div>
+    </form>
 </div>
 
 @section Scripts {
