--- a/Anamnese/Views/PacienteModels/Create.cshtml
+++ b/Anamnese/Views/PacienteModels/Create.cshtml
@@ -5,7 +5,7 @@
 
 }
 
-<h1>Cadastro de pacientes</h1>
+<h1 class="text-center">Cadastro de pacientes</h1>
 <hr />
 <div class="contaienr">
         <form asp-action="Create">
