--- a/Anamnese/Views/PacienteModels/Edit.cshtml
+++ b/Anamnese/Views/PacienteModels/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Editar Paciente</h1>
+<h1 class="text-center">Editar Paciente</h1>
 <hr />
 <div class="container">
     <form asp-action="Edit">
