--- a/Anamnese/Views/AnamneseModels/Create.cshtml
+++ b/Anamnese/Views/AnamneseModels/Create.cshtml
@@ -5,67 +5,70 @@
     var idPaciente = Context.Request.Query["IdPaciente"].ToString();
 }
 
-<h1>Cadastro de Anamnese</h1>
+<h1 class="text-center">Cadastro de Anamnese</h1>
 
-<p>idPaciente: @idPaciente</p>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="containaer">
+    <div class="row">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input asp-for="IdPaciente" value="@idPaciente" type="hidden" />
             <div class="form-group">
                 <label asp-for="QueixaPrincipalAnamnese" class="control-label"></label>
-                <input asp-for="QueixaPrincipalAnamnese" class="form-control" />
+                <textarea asp-for="QueixaPrincipalAnamnese" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="QueixaPrincipalAnamnese" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="QueixaPrincipalAnamnese" class="control-label"></label>
-                <input asp-for="QueixaPrincipalAnamnese" class="form-control" />
-                <span asp-validation-for="QueixaPrincipalAnamnese" class="text-danger"></span>
-            </div>
+            <br />
             <div class="form-group">
                 <label asp-for="HistoricoDoencaAtualAnamnese" class="control-label"></label>
-                <input asp-for="HistoricoDoencaAtualAnamnese" class="form-control" />
+                <textarea asp-for="HistoricoDoencaAtualAnamnese" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="HistoricoDoencaAtualAnamnese" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="AntecedentesPessoaisAnamnese" class="control-label"></label>
-                <input asp-for="AntecedentesPessoaisAnamnese" class="form-control" />
+                <textarea asp-for="AntecedentesPessoaisAnamnese" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="AntecedentesPessoaisAnamnese" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="AntecedentesFamiliaresAnamnese" class="control-label"></label>
-                <input asp-for="AntecedentesFamiliaresAnamnese" class="form-control" />
+                <textarea asp-for="AntecedentesFamiliaresAnamnese" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="AntecedentesFamiliaresAnamnese" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="ExameFisicoAnamnese" class="control-label"></label>
-                <input asp-for="ExameFisicoAnamnese" class="form-control" />
+                <textarea asp-for="ExameFisicoAnamnese" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="ExameFisicoAnamnese" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="HipotesesDiagnosticasAnamnese" class="control-label"></label>
-                <input asp-for="HipotesesDiagnosticasAnamnese" class="form-control" />
+                <textarea asp-for="HipotesesDiagnosticasAnamnese" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="HipotesesDiagnosticasAnamnese" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="PlanoTratamentoAnamnese" class="control-label"></label>
-                <input asp-for="PlanoTratamentoAnamnese" class="form-control" />
+                <textarea asp-for="PlanoTratamentoAnamnese" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="PlanoTratamentoAnamnese" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Cadastrar" class="btn btn-primary" />
+            <hr />
+            <br />
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="form-group">
+                        <input type="submit" value="Cadastrar" class="btn btn-primary btn-lg me-2" />
+                        <a asp-action="Index" class="btn btn-secondary btn-lg" asp-controller="AnamneseModels" asp-route-idPaciente="@idPaciente">Voltar</a>
+                    </div>
+                </div>
             </div>
+            <br />
+            <br />
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index" asp-controller="AnamneseModels" asp-route-idPaciente="@idPaciente">Voltar para a lista de Anamneses</a>
-    <a asp-action="Index" asp-controller="AnamneseModels" asp-route-idPaciente="@idPaciente">Voltar</a>
-</div>
-
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
