quase pronto, só falta arrumar o pdf

--- a/Anamnese/Views/PacienteModels/Create.cshtml
+++ b/Anamnese/Views/PacienteModels/Create.cshtml
@@ -8,7 +8,7 @@
 <h1 class="text-center">Cadastro de pacientes</h1>
 <hr />
 <div class="contaienr">
-        <form asp-action="Create">
+    <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="row">
                 <div class="col">
@@ -117,14 +117,16 @@
             <div class="col">
                 <div class="form-group">
                     <label asp-for="CepPaciente" class="control-label"></label>
-                    <input asp-for="CepPaciente" class="form-control" placeholder="XXXXX-XXX" />
+                    <div class="input-group">
+                        <input asp-for="CepPaciente" class="form-control" placeholder="XXXXX-XXX" id="cep" />
+                    </div>
                     <span asp-validation-for="CepPaciente" class="text-danger"></span>
                 </div>
             </div>
             <div class="col">
                 <div class="form-group">
                     <label asp-for="LogradouroPaciente" class="control-label"></label>
-                    <input asp-for="LogradouroPaciente" class="form-control" />
+                    <input asp-for="LogradouroPaciente" id="logradouro" class="form-control" />
                     <span asp-validation-for="LogradouroPaciente" class="text-danger"></span>
                 </div>
             </div>
@@ -137,25 +139,26 @@
             </div>
         </div>
 
+
             <div class="row">
                 <div class="col">
                     <div class="form-group">
                         <label asp-for="BairroPaciente" class="control-label"></label>
-                        <input asp-for="BairroPaciente" class="form-control" />
+                        <input asp-for="BairroPaciente" id="bairro" class="form-control" />
                         <span asp-validation-for="BairroPaciente" class="text-danger"></span>
                     </div>
                 </div>
             <div class="col">
                 <div class="form-group">
                     <label asp-for="CidadePaciente" class="control-label"></label>
-                    <input asp-for="CidadePaciente" class="form-control" />
+                    <input asp-for="CidadePaciente" id="cidade" class="form-control" />
                     <span asp-validation-for="CidadePaciente" class="text-danger"></span>
                 </div>
             </div>
             <div class="col">
                 <div class="form-group">
                     <label asp-for="EstadoPaciente" class="control-label"></label>
-                    <select asp-for="EstadoPaciente" class="form-select">
+                    <select asp-for="EstadoPaciente" id="estado" class="form-select">
                         <option value="" disabled selected>Selecione...</option>
                         <option value="AC">AC - Acre</option>
                         <option value="AL">AL - Alagoas</option>
@@ -206,4 +209,35 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#cep').on('change', function () {
+                var cep = $(this).val().replace(/\D/g, ''); // Remove caracteres não numéricos
+                if (cep.length === 8) { // Verifica se o CEP tem 8 dígitos
+                    $.ajax({
+                        url: '@Url.Action("BuscarEnderecoPorCep", "PacienteModels")',
+                        type: 'GET',
+                        data: { cep: cep },
+                        success: function (response) {
+                            if (response.error) {
+                                alert(response.error);
+                            } else {
+                                $('#logradouro').val(response.logradouro);
+                                $('#bairro').val(response.bairro);
+                                $('#cidade').val(response.localidade);
+                                $('#estado').val(response.uf);
+                            }
+                        },
+                        error: function () {
+                            alert('Ocorreu um erro ao buscar o CEP.');
+                        }
+                    });
+                } else {
+                    alert('CEP inválido. Certifique-se de que possui 8 dígitos.');
+                }
+            });
+        });
+    </script>
 }
